<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.islandarkproject.LoginOrRegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/member"
        android:id="@+id/textView3"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:layout_above="@+id/btnLogin_loginOrRegister"
        android:layout_alignStart="@+id/btnLogin_loginOrRegister" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:padding="16dp"
        android:drawableLeft="@drawable/ic_person"
        android:id="@+id/btnLogin_loginOrRegister"
        android:background="@drawable/button_transparent_rounded"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:onClick="goToLogin"
        android:layout_above="@+id/textView4"
        android:layout_marginBottom="21dp"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/not_member"
        android:id="@+id/textView4"
        android:textColor="@color/White"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:padding="16dp"
        android:drawableLeft="@drawable/ic_person_add"
        android:id="@+id/btnRegister_loginOrRegister"
        android:background="@drawable/button_transparent_rounded"
        android:layout_below="@+id/textView4"
        android:textColor="@color/White"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:textStyle="bold"
        android:onClick="goToRegister" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_home"
        android:padding="16dp"
        android:drawableLeft="@drawable/ic_home"
        android:id="@+id/btnHome_loginOrRegister"
        android:background="@drawable/button_transparent_rounded"
        android:layout_alignParentBottom="true"
        android:textColor="@color/White"
        android:layout_alignStart="@+id/btnRegister_loginOrRegister"
        android:layout_alignEnd="@+id/btnRegister_loginOrRegister"
        android:textStyle="bold"
        android:onClick="goToHome" />
</RelativeLayout>
