<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.islandarkproject.LoginActivity"
    android:background="@color/Black">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/islandarkprojectlogo"
        android:contentDescription="@string/iv_logo"
        android:id="@+id/imageView4"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearTextLayout"
        android:layout_alignParentEnd="true"
        android:background="@color/White" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_person_outline"
        android:id="@+id/imageView5"
        android:layout_alignTop="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/etUsername"
        android:layout_alignBottom="@+id/etUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:id="@+id/etUsername"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_lock_closed"
        android:id="@+id/imageView6"
        android:layout_alignTop="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/etPassword"
        android:layout_alignBottom="@+id/etPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/etUsername"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_black_background"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageView4" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:weightSum="2"
        android:id="@+id/linearTextLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/member"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/tvMembers"
            android:textColor="@color/White" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/not_member"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/tvNotMembers"
            android:textColor="@color/White" />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/linearButtonLayout"
        android:layout_below="@+id/linearTextLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:id="@+id/btnLogin_login"
            android:background="@drawable/button_blue_rounded"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/tvMembers"
            android:onClick="goToLoggedInHome"
            android:textColor="@color/White" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:text="@string/btn_register_here"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:id="@+id/btnRegisterHere_login"
            android:background="@drawable/button_green_rounded"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/tvNotMembers"
            android:onClick="goToRegister"
            android:textColor="@color/White" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearButtonLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/background"
            android:contentDescription="@string/iv_background"
            android:id="@+id/imageView2"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_home"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_home"
            android:id="@+id/btnHome_login"
            android:background="@drawable/button_transparent_rounded"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="73dp"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:onClick="goToHome" />

    </RelativeLayout>

</RelativeLayout>
